--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script>
     function openPage() {
       const name = document.getElementById("nameInput").value.trim().toLowerCase();
-      if(name === "hername") {   // 👉 replace hername with your girlfriend’s name (lowercase)
+      if(name === "Souri") {   // 👉 replace hername with your girlfriend’s name (lowercase)
         window.location.href = "birthday.html";
       } else {
         alert("Oops! This surprise is only for someone very special 💖");
