--- a/birthday.html
+++ b/birthday.html
@@ -7,7 +7,7 @@
   body {
     margin: 0;
     /* Add your college image as background */
-    background: url('souri.jpg') no-repeat center center fixed;
+    background: url('sourii.jpg') no-repeat center center fixed;
     background-size: cover; /* Makes it fill the screen */
     text-align: center;
     font-family: 'Comic Sans MS', cursive;
