--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   let name = document.getElementById("nameInput").value.trim().toLowerCase();
 
   if (name === "souri") {   // 👉 replace ankita with your gf’s name (all lowercase)
-    window.location.href = "birthday.html";
+    window.location.href = "cake.html";
   } else {
     alert("Oops! This surprise is only for someone very special 💖");
   }
