--- a/cake.html
+++ b/cake.html
@@ -42,8 +42,8 @@
 </head>
 <body>
   <h1>🎂 Click the Cake to Cut It! 🎂</h1>
-  <img id="cake" src="https://i.ibb.co/4JzJ2Bd/cake.png" alt="Cake">
-  <p>Click it and get your surprise 🎉</p>
+  <img id="cake" src="cake.jpg" alt="Cake">
+  <p>Cut it and get your surprise 🎉</p>
 
   <script>
     const cake = document.getElementById("cake");
